apps-disabled/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  #ingressClassName: ingress-nginx-apps
  ingressClassName: traefik
  rules:
  - host: whoami.essenov.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
